--- a/order-service/order-domain/order-application-service/pom.xml
+++ b/order-service/order-domain/order-application-service/pom.xml
@@ -30,5 +30,9 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>saga</artifactId>
+        </dependency>
     </dependencies>
 </project>
