--- a/restaurant-service/restaurant-dataaccess/pom.xml
+++ b/restaurant-service/restaurant-dataaccess/pom.xml
@@ -10,7 +10,28 @@
     </parent>
 
     <artifactId>restaurant-dataaccess</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>common-dataaccess</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>restaurant-application-service</artifactId>
+        </dependency>
+    </dependencies>
     <properties>
     </properties>
 
