--- a/payment-service/payment-container/src/main/resources/application.yml
+++ b/payment-service/payment-container/src/main/resources/application.yml
@@ -1,15 +1,13 @@
 server:
-  port: 8181
+  port: 8182
 
 logging:
   level:
     com.food.ordering.system: DEBUG
 
-order-service:
+payment-service:
   payment-request-topic-name: payment-request
   payment-response-topic-name: payment-response
-  restaurant-approval-request-topic-name: restaurant-approval-request
-  restaurant-approval-response-topic-name: restaurant-approval-response
 
 spring:
   jpa:
@@ -22,10 +20,11 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=payment&binaryTransfer=true&reWriteBatchedInserts=true&stringtype=unspecified
     username: postgres
-    password: admin
+    password: minh00714124869
     driver-class-name: org.postgresql.Driver
     platform: postgres
-    schema: classpath:init-data.sql
+    schema: classpath:init-schema.sql
+    data: classpath:init-data.sql
     initialization-mode: always
 
 kafka-config:
