--- a/infrastructure/kafka/kafka-producer/pom.xml
+++ b/infrastructure/kafka/kafka-producer/pom.xml
@@ -38,6 +38,10 @@
             <groupId>io.confluent</groupId>
             <artifactId>kafka-avro-serializer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>outbox</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
