--- a/order-service/order-messaging/pom.xml
+++ b/order-service/order-messaging/pom.xml
@@ -30,5 +30,9 @@
             <groupId>com.food.ordering.system</groupId>
             <artifactId>kafka-model</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>outbox</artifactId>
+        </dependency>
     </dependencies>
 </project>
