--- a/payment-service/payment-domain/payment-application-service/pom.xml
+++ b/payment-service/payment-domain/payment-application-service/pom.xml
@@ -31,6 +31,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>saga</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
