--- a/order-service/order-container/src/main/resources/application.yml
+++ b/order-service/order-container/src/main/resources/application.yml
@@ -11,6 +11,8 @@ order-service:
   restaurant-approval-response-topic-name: restaurant-approval-response
   outbox-scheduler-fixed-rate: 10000
   outbox-scheduler-initial-delay: 10000
+  customer-topic-name: customer
+
 
 spring:
   jpa:
@@ -52,6 +54,7 @@ kafka-consumer-config:
   value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
   payment-consumer-group-id: payment-topic-consumer
   restaurant-approval-consumer-group-id: restaurant-approval-topic-consumer
+  customer-group-id: customer-topic-consumer
   auto-offset-reset: earliest
   specific-avro-reader-key: specific.avro.reader
   specific-avro-reader: true
