--- a/common/common-message/pom.xml
+++ b/common/common-message/pom.xml
@@ -5,19 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.food.ordering.system</groupId>
-        <artifactId>food.ordering.system</artifactId>
+        <artifactId>common</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>customer-service</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>customer-container</module>
-        <module>customer-dataaccess</module>
-        <module>customer-application</module>
-        <module>customer-message</module>
-        <module>customer-domain</module>
-    </modules>
+    <artifactId>common-message</artifactId>
 
     <properties>
     </properties>
