--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>common-domain</module>
         <module>common-dataaccess</module>
+        <module>common-message</module>
     </modules>
 
     <properties>
