--- a/order-service/order-messaging/pom.xml
+++ b/order-service/order-messaging/pom.xml
@@ -16,6 +16,10 @@
     <dependencies>
         <dependency>
             <groupId>com.food.ordering.system</groupId>
+            <artifactId>common-message</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
             <artifactId>order-application-service</artifactId>
         </dependency>
         <dependency>
@@ -33,6 +37,10 @@
         <dependency>
             <groupId>com.food.ordering.system</groupId>
             <artifactId>outbox</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
     </dependencies>
 </project>
