--- a/payment-service/payment-container/src/main/resources/application.yml
+++ b/payment-service/payment-container/src/main/resources/application.yml
@@ -6,8 +6,8 @@ logging:
     com.food.ordering.system: DEBUG
 
 payment-service:
-  payment-request-topic-name: payment-request
-  payment-response-topic-name: payment-response
+  payment-request-topic-name: debezium.order.payment_outbox
+  payment-response-topic-name: debezium.payment.order_outbox
   outbox-scheduler-fixed-rate: 10000
   outbox-scheduler-initial-delay: 10000
 
