--- a/payment-service/payment-messaging/pom.xml
+++ b/payment-service/payment-messaging/pom.xml
@@ -31,6 +31,10 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>common-message</artifactId>
+        </dependency>
     </dependencies>
     <properties>
     </properties>
