update debezium for each service

--- a/common/common-domain/pom.xml
+++ b/common/common-domain/pom.xml
@@ -10,6 +10,12 @@
     </parent>
 
     <artifactId>common-domain</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
+    </dependencies>
 
     <properties>
     </properties>
