--- a/payment-service/payment-container/src/main/resources/application.yml
+++ b/payment-service/payment-container/src/main/resources/application.yml
@@ -54,7 +54,7 @@ kafka-consumer-config:
   auto-offset-reset: earliest
   specific-avro-reader-key: specific.avro.reader
   specific-avro-reader: true
-  batch-listener: true
+  batch-listener: false
   auto-startup: true
   concurrency-level: 3
   session-timeout-ms: 10000
