--- a/restaurant-service/restaurant-container/src/main/resources/application.yml
+++ b/restaurant-service/restaurant-container/src/main/resources/application.yml
@@ -6,8 +6,8 @@ logging:
     com.food.ordering.system: DEBUG
 
 restaurant-service:
-  restaurant-approval-request-topic-name: restaurant-approval-request
-  restaurant-approval-response-topic-name: restaurant-approval-response
+  restaurant-approval-request-topic-name: debezium.order.restaurant_approval_outbox
+  restaurant-approval-response-topic-name: debezium.restaurant.order_outbox
   outbox-scheduler-fixed-rate: 10000
   outbox-scheduler-initial-delay: 10000
 
